[package]
name = "progress-observer"
version = "2.2.0"
edition = "2021"
description = "Simple utility for scheduling efficient regular progress updates synchronously on long running, singlethreaded tasks."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"
